# python-project-52

./: .dockerignore  .env_example  .gitignore  AGENTS.md  DEVLOG.md  Dockerfile  Makefile  README.md  README_prod.md  README_ru.md  build.sh  compose.yaml  coverage.xml  docker-compose-dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: my_tests.yml
dev/: README_dev.md  cerbot.sh
docker_compose/: README.md  README_prod.md  docker-compose.dev.yaml  docker-compose.internet.yaml  docker-compose.local.yaml  env_dev_docker  env_dev_no_docker  env_prod_example
env_examples/: env_dev_docker  env_dev_no_docker  env_prod_example
locale/ru/LC_MESSAGES/: django.mo  django.po
nginx/: Dockerfile  default.conf  default_create_ssl.conf  default_example.conf  nginx.conf
nginx/conf.d/: site.conf
task_manager/: functions.py  mixins.py  rollbar_test.py  settings.py  urls.py  utils.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/projects/: admin.py  apps.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/projects/migrations/: 0001_initial.py  (+4 more)
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  form_update.html  header.html  root.html
task_manager/users/: forms.py  mixins.py  tests.py  urls.py  views.py
tests/: test_allow_host.py
(+31 files in other folders)
