[project]
name = "task-manager"
version = "1.3.5"
description = "project on django"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.7",
    "django-bootstrap5>=25.3",
    "django-filter>=25.2",
    "gunicorn>=23.0.0",
    "markdown>=3.10.2",
    "psycopg2-binary>=2.9.11",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "django-extensions>=4.1",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "ruff>=0.14.3",
]
